--- a/Homeworks/HW2.ipynb
+++ b/Homeworks/HW2.ipynb
@@ -33,8 +33,8 @@
         "               \"Ayça\":\"2015\"}\n",
         "# Ilklendirmeler       \n",
         "processRes = False\n",
-        "responses = {(0):\"Kullanıcı Adı ve/veya Şifre Yanlış\",\n",
-        "             (1):\"**Başarıyla Giriş Yaptınız!**\"}\n",
+        "responses = {(False):\"Kullanıcı Adı ve/veya Şifre Yanlış\",\n",
+        "             (True):\"**Başarıyla Giriş Yaptınız!**\"}\n",
         "\n",
         "# Kullanıcı Bilgileri Alınır\n",
         "userIn = str(input(\"Lütfen kullanıcı adınızı giriniz: \"))\n",
