--- a/Homeworks/HW2.ipynb
+++ b/Homeworks/HW2.ipynb
@@ -47,7 +47,7 @@
         "    processRes = True\n",
         "    break\n",
         "\n",
-        "responses[(processRes)]\n"
+        "print(responses[(processRes)])\n"
       ],
       "execution_count": 14,
       "outputs": [
