--- a/Homeworks/HW1.ipynb
+++ b/Homeworks/HW1.ipynb
@@ -67,8 +67,11 @@
         "# Day2, Homework1, Section-2\n",
         "n = int(input(\"Tek basamaklı pozitif tam bir sayı giriniz:\"))\n",
         "\n",
-        "list1=[i for i in range(n+1) if not(i % 2) ]\n",
-        "print(\"0'dan baslayarak \"+ str(n) +\"'e kadar olan tam çift sayilar:\",list1)\n"
+        "if n > 0 and n < 10:\n",
+          "list1=[i for i in range(n+1) if not(i % 2) ]\n",
+          "print(\"0'dan baslayarak \"+ str(n) +\"'e kadar olan tam çift sayilar:\",list1)\n"
+        "else:\n",
+          "print(\"Girilen değer uygun aralıkta değil!\")\n"
       ],
       "execution_count": 4,
       "outputs": [
